200 OK http://www.assembly.go.kr/assm/memPop/memPopup.do?dept_cd=9770753

--- a/www.assembly.go.kr/09a2d6208f9b5310abaa4d02435b9379f9d3fd72.html
+++ b/www.assembly.go.kr/09a2d6208f9b5310abaa4d02435b9379f9d3fd72.html
@@ -193,7 +193,7 @@
 							<dt>홈페이지</dt>
 							<dd><a href="http://www.gowithwr.com" target="_blank" title="새창에서 열림">http://www.gowithwr.com</a></dd>
 							<dt>이메일</dt>
-							<dd>wraenoh@hanmail.net</dd>
+							<dd>wraenoh1@gmail.com</dd>
 							<dt>보좌관</dt>
 							<dd>
 								    								    									권태돈
