200 OK http://www.assembly.go.kr/assm/memPop/memPopup.do?dept_cd=9770864

--- a/www.assembly.go.kr/6521048193b6a6db213676d267bd56a8fac00de8.html
+++ b/www.assembly.go.kr/6521048193b6a6db213676d267bd56a8fac00de8.html
@@ -194,9 +194,9 @@
     									    																							</dd>
 							<dt>비서관</dt>
 							<dd>
-								    								    									신남수
+								    								    									윤석민
     									    										 ,
-    									    								    									윤석민
+    									    								    									윤영진
     									    																							</dd>
 							<dt>비서</dt>
 							<dd>
