--- a/korea.assembly.go.kr/a50d46c1e5a16096436c6329dcc712efa81c127b.html
+++ b/korea.assembly.go.kr/a50d46c1e5a16096436c6329dcc712efa81c127b.html
@@ -69,7 +69,7 @@
 					</tr>
 					<tr>
 						<th>COMMITTEE</th>
-						<td>Security and Public Administration Committee ; Special Committee on the Confirmation Hearing for the Nomination of Constitutional Court President ; Special Committee on Natality and Aging</td>
+						<td>Security and Public Administration Committee ; Special Committee on the Confirmation Hearing for the Nomination of Constitutional Court President ; Special Committee on Constitutional Amendment ; Special Committee on Natality and Aging</td>
 					</tr>
 					<tr>
 						<th>CITY OR PROVINCE</th>
