200 OK http://www.assembly.go.kr/assm/memPop/memPopup.do?dept_cd=9770852

--- a/www.assembly.go.kr/6a1da53063eb1b75f37ad3d9b3402089ed7d314f.html
+++ b/www.assembly.go.kr/6a1da53063eb1b75f37ad3d9b3402089ed7d314f.html
@@ -185,6 +185,8 @@
 																			 ,
 																										저출산·고령화대책 특별위원회
 																			 ,
+																										헌법개정 특별위원회
+																			 ,
 																										헌법재판소장(김이수) 임명동의에 관한 인사청문특별위원회
 																								</dd>
 							<dt>당선횟수</dt>
