200 OK http://www.assembly.go.kr/assm/memPop/memPopup.do?dept_cd=9771068

--- a/www.assembly.go.kr/c62d1d244e2b119e77c8f5c0a014f8a8fc62710d.html
+++ b/www.assembly.go.kr/c62d1d244e2b119e77c8f5c0a014f8a8fc62710d.html
@@ -198,7 +198,7 @@
 							<dd>hopejung@na.go.kr</dd>
 							<dt>보좌관</dt>
 							<dd>
-																	여준성, 고미경
+																	고미경
 															</dd>
 							<dt>비서관</dt>
 							<dd>
