--- a/korea.assembly.go.kr/9d041f390f8b056bcb7a0ac4b5d5291c7be70a44.html
+++ b/korea.assembly.go.kr/9d041f390f8b056bcb7a0ac4b5d5291c7be70a44.html
@@ -69,7 +69,7 @@
 					</tr>
 					<tr>
 						<th>COMMITTEE</th>
-						<td>House Steering Committee ; National Defense Committee ; Intelligence Committee ; Special Committee on Constitutional Amendment</td>
+						<td>House Steering Committee ; National Defense Committee ; Intelligence Committee</td>
 					</tr>
 					<tr>
 						<th>CITY OR PROVINCE</th>
