--- a/korea.assembly.go.kr/8b27948b631767dadd5b384a899f034c1b415238.html
+++ b/korea.assembly.go.kr/8b27948b631767dadd5b384a899f034c1b415238.html
@@ -69,7 +69,7 @@
 					</tr>
 					<tr>
 						<th>COMMITTEE</th>
-						<td>National Policy Committee ; Special Committee on the Pyeongchang Winter Olympics and International Sporting Events</td>
+						<td>National Policy Committee ; Special Committee on Constitutional Amendment ; Special Committee on the Pyeongchang Winter Olympics and International Sporting Events</td>
 					</tr>
 					<tr>
 						<th>CITY OR PROVINCE</th>
