200 OK http://www.assembly.go.kr/assm/memPop/memPopup.do?dept_cd=9770527

--- a/www.assembly.go.kr/52ce30abdf315764a58bceeaf3bcd6ac5127d195.html
+++ b/www.assembly.go.kr/52ce30abdf315764a58bceeaf3bcd6ac5127d195.html
@@ -162,7 +162,7 @@
 						<dl class="per_history">
 							<dt>약력</dt>
 							<dd tabindex="0">
-								o 학력<br /><br />  -1972. 2 공주사대부속고등학교 졸업 <br />  -1976. 2 이화여자대학교 제약학과 졸업<br /><br />o 경력<br /><br />  -한국여성민우회 상임대표<br />  -여성환경연대 공동대표<br />  -한국방송공사(KBS) 이사<br />  -대통령자문 지속가능발전위원회 위원장<br />  -통합민주당 최고위원 <br />  -제18대 국회의원(비례대표)<br />  -민주당 전국여성위원장<br />  -민주당 소사구 지역위원장<br />  -국회 환경노동위원회 위원<br />  -국회 교육과학기술위원회위원/여성가족위원회간사<br />  -국회예산결산특별위원회 위원<br />  -국회 국민건강복지포럼 공동대표<br />  -민주당 원내부대표<br /> <br />o 현직<br /><br />  -제19대 국회의원(부천시소사구)<br />  -민주통합당 소사구 지역위원장<br />  -국회 여성가족위원회 위원장<br />  -국회 교육과학기술위원<br />  -국회 성평등정책포럼 대표
+								o 학력 <br /><br />-1972. 2 공주사대부속고등학교 졸업 <br />-1976. 2 이화여자대학교 제약학과 졸업 <br /><br /><br />o 경력 <br /><br />-한국여성민우회 상임대표 <br />-여성환경연대 공동대표 <br />-한국방송공사(KBS) 이사 <br />-대통령자문 지속가능발전위원회 위원장 (장관급)<br /><br />-통합민주당 최고위원 <br />-민주당 전국여성위원장 <br />-민주당 소사구 지역위원장 <br />-민주당 원내부대표<br />-제18대 국회의원(비례대표), 19대 국회의원(부천소사) <br />-국회 환경노동위원회, 교육과학기술위원회, 교육문화체육관광위원회, 국토교통위원회 위원 <br />-국회 여성가족위원회 간사<br />-국회 예산결산특별위원회, 서민주거복지특별위원회 위원 <br />-국회 국민건강복지포럼 공동대표 <br />-국회 여성가족위원회 위원장 <br />-국회 성평등정책포럼 대표 <br /><br /><br />o 현직 <br /><br />-제20대 국회의원(부천시소사구) <br />-더불어민주당 부천 소사 지역위원장 <br />-국회 민생경제특별위원회 위원장 <br />-국회 보건복지위원회 위원 <br />-국회 인구정책과 생활정치를 위한 의원모임 대표의원 <br />-더불어민주당 을지로위원회 위원 
 							</dd>
 						</dl>
 						<!-- //약력 -->
