200 OK http://www.assembly.go.kr/assm/memPop/memPopup.do?dept_cd=9770998

--- a/www.assembly.go.kr/07206839f36fbc5e3b6e330696eec8a828fe2faf.html
+++ b/www.assembly.go.kr/07206839f36fbc5e3b6e330696eec8a828fe2faf.html
@@ -208,7 +208,7 @@
 															</dd>
 							<dt>비서</dt>
 							<dd>
-																	현다민, 김소정, 신전학, 김상혁, 박지현
+																	현다민, 이우연, 신전학, 김상혁, 박지현
 															</dd>
 							<dt>취미, 특기</dt>
 							<dd></dd>
