--- a/korea.assembly.go.kr/f6227d839e90b71b5b317f53e848ba4f67220275.html
+++ b/korea.assembly.go.kr/f6227d839e90b71b5b317f53e848ba4f67220275.html
@@ -69,7 +69,7 @@
 					</tr>
 					<tr>
 						<th>COMMITTEE</th>
-						<td>Science, ICT, Future Planning, Broadcasting, and Communications Committee</td>
+						<td>House Steering Committee ; Science, ICT, Future Planning, Broadcasting, and Communications Committee</td>
 					</tr>
 					<tr>
 						<th>CITY OR PROVINCE</th>
