--- a/www.assembly.go.kr/9e91b52dafd5d091637aefe1443bdf0c259fadb6.html
+++ b/www.assembly.go.kr/9e91b52dafd5d091637aefe1443bdf0c259fadb6.html
@@ -181,7 +181,9 @@
 							<dd>대전 중구</dd>
 							<dt>소속위원회</dt>
 							<dd>
-																									미래창조과학방송통신위원회
+																									국회운영위원회
+																			 ,
+																										미래창조과학방송통신위원회
 																								</dd>
 							<dt>당선횟수</dt>
 							<dd>초선(
