--- a/korea.assembly.go.kr/995f1461145d6ba4a4006dd8a84f4ce6a1b18123.html
+++ b/korea.assembly.go.kr/995f1461145d6ba4a4006dd8a84f4ce6a1b18123.html
@@ -69,7 +69,7 @@
 					</tr>
 					<tr>
 						<th>COMMITTEE</th>
-						<td>House Steering Committee ; Security and Public Administration Committee ; Special Committee on Natality and Aging</td>
+						<td>Security and Public Administration Committee ; Special Committee on Natality and Aging</td>
 					</tr>
 					<tr>
 						<th>CITY OR PROVINCE</th>
