200 OK http://www.assembly.go.kr/assm/memPop/memPopup.do?dept_cd=9770869

--- a/www.assembly.go.kr/6dff31342657900396ff22ab6e9fd68765daba4b.html
+++ b/www.assembly.go.kr/6dff31342657900396ff22ab6e9fd68765daba4b.html
@@ -212,7 +212,7 @@
 															</dd>
 							<dt>비서</dt>
 							<dd>
-																	박한기, 최경희, 김정아, 박소정
+																	박한기, 최경희, 백상진, 김정아, 박소정
 															</dd>
 							<dt>취미, 특기</dt>
 							<dd>매력발산 (a.k.a 심블리, 심크러쉬)</dd>
