200 OK http://www.assembly.go.kr/assm/memPop/memPopup.do?dept_cd=9771019

--- a/www.assembly.go.kr/1de39b81b83e3a64f0834ad12932b53d2f46984c.html
+++ b/www.assembly.go.kr/1de39b81b83e3a64f0834ad12932b53d2f46984c.html
@@ -192,7 +192,7 @@
 															</dd>
 							<dt>비서관</dt>
 							<dd>
-																	김진하, 송영우
+																	송영우
 															</dd>
 							<dt>비서</dt>
 							<dd>
