200 OK http://www.assembly.go.kr/assm/memPop/memPopup.do?dept_cd=9771058

--- a/www.assembly.go.kr/ae5f6e50753879f98d1bfbcb67ef3ee4f4c04a5f.html
+++ b/www.assembly.go.kr/ae5f6e50753879f98d1bfbcb67ef3ee4f4c04a5f.html
@@ -207,6 +207,8 @@
     									    								    									김진호
     									    										 ,
     									    								    									이경욱
+    									    										 ,
+    									    								    									이종찬
     									    																							</dd>
 							<dt>취미, 특기</dt>
 							<dd></dd>
