--- a/www.assembly.go.kr/ec5be72f77bf55dfd7897643ea8a26109bd63c70.html
+++ b/www.assembly.go.kr/ec5be72f77bf55dfd7897643ea8a26109bd63c70.html
@@ -162,7 +162,7 @@
 						<dl class="per_history">
 							<dt>약력</dt>
 							<dd tabindex="0">
-								- 경북 구미시 출생<br />- 제20대 국회의원<br />- 국회 국방위원회 위원<br />- 미래일자리특별위원회 위원<br />- 새누리당 경북도당위원장<br />- 前) 국방부 차관 (제40대)<br />- 前) 한국국방연구원 안보전략연구센터장<br />
+								- 경북 구미시 출생<br />- 제20대 국회의원<br />- 국회 국방위원회 위원<br />- 예산결산특별위원회 위원<br />- 새누리당 경북도당위원장<br />- 前) 국방부 차관 (제40대)<br />- 前) 한국국방연구원 안보전략연구센터장<br />
 							</dd>
 						</dl>
 						<!-- //약력 -->
@@ -202,7 +202,7 @@
 															</dd>
 							<dt>비서관</dt>
 							<dd>
-																	이관순, 서우태
+																	서우태
 															</dd>
 							<dt>비서</dt>
 							<dd>
