200 OK http://www.assembly.go.kr/assm/memPop/memPopup.do?dept_cd=9770993

--- a/www.assembly.go.kr/3f2f6936344f6d42a1fa71766b67c8fae52bc70f.html
+++ b/www.assembly.go.kr/3f2f6936344f6d42a1fa71766b67c8fae52bc70f.html
@@ -200,7 +200,7 @@
 							<dd>
 								    								    									김동욱
     									    										 ,
-    									    								    									이준호
+    									    								    									박민우
     									    																							</dd>
 							<dt>비서관</dt>
 							<dd>
