200 OK http://www.assembly.go.kr/assm/memPop/memPopup.do?dept_cd=9770310

--- a/www.assembly.go.kr/019842636c8205f554e5240b5cafe3eb0ecdaf21.html
+++ b/www.assembly.go.kr/019842636c8205f554e5240b5cafe3eb0ecdaf21.html
@@ -220,6 +220,8 @@
 							<dd>
 								    								    									김군나
     									    										 ,
+    									    								    									황정화
+    									    										 ,
     									    								    									김지원
     									    										 ,
     									    								    									김용환
