200 OK http://www.assembly.go.kr/assm/memPop/memPopup.do?dept_cd=9771023

--- a/www.assembly.go.kr/93204d33f4fa1061e1126b37c5a180fed346bf97.html
+++ b/www.assembly.go.kr/93204d33f4fa1061e1126b37c5a180fed346bf97.html
@@ -196,7 +196,7 @@
 							<dd>
 								    								    									박선영
     									    										 ,
-    									    								    									정성전
+    									    								    									안종일
     									    																							</dd>
 							<dt>비서</dt>
 							<dd>
