200 OK http://www.assembly.go.kr/assm/memPop/memPopup.do?dept_cd=9771033

--- a/www.assembly.go.kr/b503a1bf883056b352aa46a0f79b814b09588537.html
+++ b/www.assembly.go.kr/b503a1bf883056b352aa46a0f79b814b09588537.html
@@ -169,7 +169,9 @@
 							<dd>경남 김해시을</dd>
 							<dt>소속위원회</dt>
 							<dd>
-																									산업통상자원위원회
+																									국회운영위원회
+																			 ,
+																										산업통상자원위원회
 																								</dd>
 							<dt>당선횟수</dt>
 							<dd>초선(
