200 OK http://www.assembly.go.kr/assm/memPop/memPopup.do?dept_cd=9770961

--- a/www.assembly.go.kr/d1fbe1828d996337f995913baaf3c95b22bb2401.html
+++ b/www.assembly.go.kr/d1fbe1828d996337f995913baaf3c95b22bb2401.html
@@ -210,9 +210,9 @@
 							<dd>
 								    								    									김진환
     									    										 ,
-    									    								    									김은실
-    									    										 ,
     									    								    									이강희
+    									    										 ,
+    									    								    									이소림
     									    																							</dd>
 							<dt>취미, 특기</dt>
 							<dd>등산, 독서, 마라톤</dd>
