200 OK http://www.assembly.go.kr/assm/memPop/memPopup.do?dept_cd=9771004

--- a/www.assembly.go.kr/47990cae5cfa8f49392a94dae3dde2319edf0fb7.html
+++ b/www.assembly.go.kr/47990cae5cfa8f49392a94dae3dde2319edf0fb7.html
@@ -204,7 +204,9 @@
     									    																							</dd>
 							<dt>비서관</dt>
 							<dd>
-								    								    									이명재
+								    								    									김광표
+    									    										 ,
+    									    								    									이명재
     									    																							</dd>
 							<dt>비서</dt>
 							<dd>
