200 OK http://korea.assembly.go.kr/mem/mem_pro.jsp?mem_code=Whg6naUaOCc=

--- a/korea.assembly.go.kr/720529d54a539dab99fbc6fb415fe1bf4bfc04aa.html
+++ b/korea.assembly.go.kr/720529d54a539dab99fbc6fb415fe1bf4bfc04aa.html
@@ -69,7 +69,7 @@
 					</tr>
 					<tr>
 						<th>COMMITTEE</th>
-						<td>House Steering Committee ; Security and Public Administration Committee</td>
+						<td>Security and Public Administration Committee</td>
 					</tr>
 					<tr>
 						<th>CITY OR PROVINCE</th>
