200 OK http://www.assembly.go.kr/assm/memPop/memPopup.do?dept_cd=9771069

--- a/www.assembly.go.kr/06b70d7472eb2f1d1e53a712823f648639f37c29.html
+++ b/www.assembly.go.kr/06b70d7472eb2f1d1e53a712823f648639f37c29.html
@@ -188,16 +188,22 @@
 							<dd>yhshin845@gmail.com</dd>
 							<dt>보좌관</dt>
 							<dd>
-																	방인호, 최춘규
-															</dd>
+								    								    									방인호
+    									    										 ,
+    									    								    									최춘규
+    									    																							</dd>
 							<dt>비서관</dt>
 							<dd>
-																	유재은, 박지현
-															</dd>
+								    								    									박지현
+    									    										 ,
+    									    								    									유재은
+    									    																							</dd>
 							<dt>비서</dt>
 							<dd>
-																	박선연, 한진영, 왕영훈, 박동근, 이나현
-															</dd>
+								    								    									박선연
+    									    										 ,
+    									    								    									한진영
+    									    																							</dd>
 							<dt>취미, 특기</dt>
 							<dd></dd>
 						</dl>
