200 OK http://www.assembly.go.kr/assm/memPop/memPopup.do?dept_cd=9770948

--- a/www.assembly.go.kr/9180697a009af7acac50f55a7dcd16133ee5dae7.html
+++ b/www.assembly.go.kr/9180697a009af7acac50f55a7dcd16133ee5dae7.html
@@ -208,11 +208,11 @@
 															</dd>
 							<dt>비서관</dt>
 							<dd>
-																	박진형
+																	박진형, 정은빈
 															</dd>
 							<dt>비서</dt>
 							<dd>
-																	정은빈, 한종우, 김민수, 신승원, 임현기
+																	이경수, 한종우, 김민수, 신승원, 임현기
 															</dd>
 							<dt>취미, 특기</dt>
 							<dd></dd>
