200 OK http://www.assembly.go.kr/assm/memPop/memPopup.do?dept_cd=9770138

--- a/www.assembly.go.kr/1179104c638ada35019fc91f72e66f70c5e86532.html
+++ b/www.assembly.go.kr/1179104c638ada35019fc91f72e66f70c5e86532.html
@@ -206,15 +206,17 @@
 							<dd>cleanshim@naver.com</dd>
 							<dt>보좌관</dt>
 							<dd>
-																	정연철
+																	추대동, 정연철
 															</dd>
 							<dt>비서관</dt>
 							<dd>
-																	박영명, 박주현
-															</dd>
+								    								    									나태근
+    									    										 ,
+    									    								    									박주현
+    									    																							</dd>
 							<dt>비서</dt>
 							<dd>
-																	박준혁, 김연진
+																	이진원, 박준혁
 															</dd>
 							<dt>취미, 특기</dt>
 							<dd>색소폰</dd>
