200 OK http://korea.assembly.go.kr/mem/mem_01.jsp

--- a/korea.assembly.go.kr/c1dbae37deaae1a4d69f174443f46e202595642e.html
+++ b/korea.assembly.go.kr/c1dbae37deaae1a4d69f174443f46e202595642e.html
@@ -351,7 +351,7 @@
 				<li><a href="#Alphabet09" onclick="fnClickAlpha(8);">Y ~ Z</a></li>
 			</ul>
 			<div class="cb"></div>
-			<p class="ar b mt30 b10">Wed, Jun 21, '17</p>
+			<p class="ar b mt30 b10">Thu, Jun 22, '17</p>
 			<div class="boxType03">
 				<div class="boxT">&nbsp;</div>
 				<div class="mt_36"><img id="Alphabet01" src="/images/member/az_01.gif" alt="A ~ C" /></div>
@@ -572,6 +572,7 @@
 <li><a href="#" onclick="memInfo('SfBgwJjSioU%3D'); return false">LEE SANGDON</a></li>	
 <li><a href="#" onclick="memInfo('GhF4BKvuc2k%3D'); return false">LEE SANGMIN</a></li>	
 <li><a href="#" onclick="memInfo('vcrwHL2rZyA%3D'); return false">LEE SEOKHYUN</a></li>	
+<li><a href="#" onclick="memInfo('EFonLHEHCsE%3D'); return false">LEE SOOHYUCK</a></li>	
 <li><a href="#" onclick="memInfo('1sbNGyNgyvI%3D'); return false">LEE TAEKYU</a></li>	
 <li><a href="#" onclick="memInfo('F16GgrX7q2U%3D'); return false">LEE UNJU</a></li>	
 <li><a href="#" onclick="memInfo('UXuZE4dK73c%3D'); return false">LEE WONWOOK</a></li>	
