200 OK http://www.assembly.go.kr/assm/memPop/memPopup.do?dept_cd=9770587

--- a/www.assembly.go.kr/a6f1fe832e06da77547563ec23ee68f24e06d8f7.html
+++ b/www.assembly.go.kr/a6f1fe832e06da77547563ec23ee68f24e06d8f7.html
@@ -210,7 +210,7 @@
 							<dd>
 								    								    									김준태
     									    										 ,
-    									    								    									최병민
+    									    								    									김도현
     									    										 ,
     									    								    									강재승
     									    																							</dd>
