--- a/korea.assembly.go.kr/09d4348a88600db22e41610f773b9af0f514610a.html
+++ b/korea.assembly.go.kr/09d4348a88600db22e41610f773b9af0f514610a.html
@@ -69,7 +69,7 @@
 					</tr>
 					<tr>
 						<th>COMMITTEE</th>
-						<td>House Steering Committee ; National Policy Committee ; Special Committee on Confirmation Hearing on the Nomination of Prime Minister ; Special Committee on Decentralization and Local Financing</td>
+						<td>House Steering Committee ; National Policy Committee ; Special Committee on Decentralization and Local Financing</td>
 					</tr>
 					<tr>
 						<th>CITY OR PROVINCE</th>
