200 OK http://www.assembly.go.kr/assm/memPop/memPopup.do?dept_cd=9770755

--- a/www.assembly.go.kr/1491dc309a46b2e64a7ec5e45a9ebba094ccd7ba.html
+++ b/www.assembly.go.kr/1491dc309a46b2e64a7ec5e45a9ebba094ccd7ba.html
@@ -176,6 +176,8 @@
 							<dt>소속위원회</dt>
 							<dd>
 																									교육문화체육관광위원회
+																			 ,
+																										안전행정위원회
 																								</dd>
 							<dt>당선횟수</dt>
 							<dd>재선(
