200 OK http://www.assembly.go.kr/assm/memPop/memPopup.do?dept_cd=9771010

--- a/www.assembly.go.kr/fb4cc9d69beeb01587c73e10956c291f8ff73311.html
+++ b/www.assembly.go.kr/fb4cc9d69beeb01587c73e10956c291f8ff73311.html
@@ -192,21 +192,19 @@
 							<dd>
 								    								    									구본현
     									    										 ,
-    									    								    									이길우
+    									    								    									조영학
     									    																							</dd>
 							<dt>비서관</dt>
 							<dd>
-								    								    									조영학
+								    								    									조장관
     									    										 ,
-    									    								    									조장관
+    									    								    									최원석
     									    																							</dd>
 							<dt>비서</dt>
 							<dd>
 								    								    									이경식
     									    										 ,
     									    								    									김진영
-    									    										 ,
-    									    								    									도소연
     									    																							</dd>
 							<dt>취미, 특기</dt>
 							<dd></dd>
