200 OK http://www.assembly.go.kr/assm/memPop/memPopup.do?dept_cd=9770959

--- a/www.assembly.go.kr/2dd4ea8cc4bd71bb7905fd7a04e8ff728278958b.html
+++ b/www.assembly.go.kr/2dd4ea8cc4bd71bb7905fd7a04e8ff728278958b.html
@@ -204,12 +204,8 @@
     									    																							</dd>
 							<dt>비서</dt>
 							<dd>
-								    								    									김지연
-    									    										 ,
-    									    								    									송일용
-    									    										 ,
-    									    								    									홍유정
-    									    																							</dd>
+																	송일용,도소연,홍유정,장유리,김빛나,이도희
+															</dd>
 							<dt>취미, 특기</dt>
 							<dd></dd>
 						</dl>
