--- a/korea.assembly.go.kr/9310c7e478698f8c6c22d57c779997614382e694.html
+++ b/korea.assembly.go.kr/9310c7e478698f8c6c22d57c779997614382e694.html
@@ -69,7 +69,7 @@
 					</tr>
 					<tr>
 						<th>COMMITTEE</th>
-						<td>House Steering Committee ; National Policy Committee ; Special Committee on Confirmation Hearing on the Nomination of Prime Minister ; Special Committee on an Economy for People's Livelihoods</td>
+						<td>House Steering Committee ; National Policy Committee ; Special Committee on an Economy for People's Livelihoods</td>
 					</tr>
 					<tr>
 						<th>CITY OR PROVINCE</th>
