200 OK http://korea.assembly.go.kr/mem/mem_pro.jsp?mem_code=oIVuhXytvb4=

--- a/korea.assembly.go.kr/77784e18c32c19c51083c08359013d2eaf2d44e1.html
+++ b/korea.assembly.go.kr/77784e18c32c19c51083c08359013d2eaf2d44e1.html
@@ -69,7 +69,7 @@
 					</tr>
 					<tr>
 						<th>COMMITTEE</th>
-						<td>Special Committee on Ethics ; Health and Welfare Committee ; Special Committee on Confirmation Hearing on the Nomination of Prime Minister</td>
+						<td>Special Committee on Ethics ; Health and Welfare Committee</td>
 					</tr>
 					<tr>
 						<th>CITY OR PROVINCE</th>
