--- a/korea.assembly.go.kr/193d7b954f84a33ec783aa35083e0d34e2a45eb5.html
+++ b/korea.assembly.go.kr/193d7b954f84a33ec783aa35083e0d34e2a45eb5.html
@@ -69,7 +69,7 @@
 					</tr>
 					<tr>
 						<th>COMMITTEE</th>
-						<td>Legislation and Judiciary Committee ; Special Committee on Confirmation Hearing on the Nomination of Prime Minister</td>
+						<td>Legislation and Judiciary Committee</td>
 					</tr>
 					<tr>
 						<th>CITY OR PROVINCE</th>
