--- a/korea.assembly.go.kr/c253e4b43cf701569fbe57f4ab15ee4027096c05.html
+++ b/korea.assembly.go.kr/c253e4b43cf701569fbe57f4ab15ee4027096c05.html
@@ -69,7 +69,7 @@
 					</tr>
 					<tr>
 						<th>COMMITTEE</th>
-						<td>Science, ICT, Future Planning, Broadcasting, and Communications Committee ; Special Committee on Confirmation Hearing on the Nomination of Prime Minister ; Special Committee on Constitutional Amendment</td>
+						<td>Science, ICT, Future Planning, Broadcasting, and Communications Committee ; Special Committee on Constitutional Amendment</td>
 					</tr>
 					<tr>
 						<th>CITY OR PROVINCE</th>
