200 OK http://www.assembly.go.kr/assm/memPop/memPopup.do?dept_cd=9771044

--- a/www.assembly.go.kr/12653192f8c3ea5defccca208e99c2f51f1d14a5.html
+++ b/www.assembly.go.kr/12653192f8c3ea5defccca208e99c2f51f1d14a5.html
@@ -63,7 +63,7 @@
 <a href="#contentMain" class="skip-nav">본문바로가기</a>
 
 <form id="memPopForm" name="memPopForm" method="post">
-<input type="hidden" name="num" id="num" value="2917">
+<input type="hidden" name="num" id="num" value="2918">
 <input type="hidden" name="emp_nm" id="emp_nm" value="김규환">
 <input type="hidden" name="dept_cd" id="dept_cd" value="9771044">
 <input type="hidden" name="poly_nm" id="poly_nm" value="자유한국당">
@@ -188,16 +188,22 @@
 							<dd>gyuhwan01@hanmail.net</dd>
 							<dt>보좌관</dt>
 							<dd>
-																	김용연
-															</dd>
+								    								    									이은정
+    									    																							</dd>
 							<dt>비서관</dt>
 							<dd>
-																	조태희, 이은정
-															</dd>
+								    								    									이진혁
+    									    										 ,
+    									    								    									조태희
+    									    																							</dd>
 							<dt>비서</dt>
 							<dd>
-																	김영기, 김나래, 김지선
-															</dd>
+								    								    									김영기
+    									    										 ,
+    									    								    									김나래
+    									    										 ,
+    									    								    									김지선
+    									    																							</dd>
 							<dt>취미, 특기</dt>
 							<dd></dd>
 						</dl>
