--- a/korea.assembly.go.kr/e811c904a0479ed274ab530929184c56cdd81af3.html
+++ b/korea.assembly.go.kr/e811c904a0479ed274ab530929184c56cdd81af3.html
@@ -69,7 +69,7 @@
 					</tr>
 					<tr>
 						<th>COMMITTEE</th>
-						<td>Health and Welfare Committee ; Special Committee on Confirmation Hearing on the Nomination of Prime Minister ; Special Committee on Natality and Aging</td>
+						<td>Health and Welfare Committee ; Special Committee on Natality and Aging</td>
 					</tr>
 					<tr>
 						<th>CITY OR PROVINCE</th>
