200 OK http://www.assembly.go.kr/assm/memPop/memPopup.do?dept_cd=9771053

--- a/www.assembly.go.kr/691e84bb26aa5634ecd25ef01afbcd9241ef7ba9.html
+++ b/www.assembly.go.kr/691e84bb26aa5634ecd25ef01afbcd9241ef7ba9.html
@@ -63,7 +63,7 @@
 <a href="#contentMain" class="skip-nav">본문바로가기</a>
 
 <form id="memPopForm" name="memPopForm" method="post">
-<input type="hidden" name="num" id="num" value="2910">
+<input type="hidden" name="num" id="num" value="2911">
 <input type="hidden" name="emp_nm" id="emp_nm" value="김순례">
 <input type="hidden" name="dept_cd" id="dept_cd" value="9771053">
 <input type="hidden" name="poly_nm" id="poly_nm" value="자유한국당">
@@ -170,6 +170,8 @@
 							<dt>소속위원회</dt>
 							<dd>
 																									보건복지위원회
+																			 ,
+																										환경노동위원회
 																			 ,
 																										여성가족위원회
 																			 ,
