--- a/korea.assembly.go.kr/0dfd1c3c9f1c5afd84ab1bed6ba50ce36c2dd0fa.html
+++ b/korea.assembly.go.kr/0dfd1c3c9f1c5afd84ab1bed6ba50ce36c2dd0fa.html
@@ -69,7 +69,7 @@
 					</tr>
 					<tr>
 						<th>COMMITTEE</th>
-						<td>National Policy Committee ; Special Committee on Budget & Accounts ; Special Committee on Confirmation Hearing on the Nomination of Prime Minister ; Special Committee on Inter-Korean Reconciliation</td>
+						<td>National Policy Committee ; Special Committee on Budget & Accounts ; Special Committee on Inter-Korean Reconciliation</td>
 					</tr>
 					<tr>
 						<th>CITY OR PROVINCE</th>
