--- a/korea.assembly.go.kr/d958bc83603c6e7dbfd9f03ab52a17ad884d4395.html
+++ b/korea.assembly.go.kr/d958bc83603c6e7dbfd9f03ab52a17ad884d4395.html
@@ -69,7 +69,7 @@
 					</tr>
 					<tr>
 						<th>COMMITTEE</th>
-						<td>National Defense Committee ; Special Committee on Budget & Accounts ; Special Committee on Confirmation Hearing on the Nomination of Prime Minister ; Special Committee on Political Development</td>
+						<td>National Defense Committee ; Special Committee on Budget & Accounts ; Special Committee on Political Development</td>
 					</tr>
 					<tr>
 						<th>CITY OR PROVINCE</th>
