--- a/korea.assembly.go.kr/e6bd8f4307f040267eef6cc690602bba6fab3595.html
+++ b/korea.assembly.go.kr/e6bd8f4307f040267eef6cc690602bba6fab3595.html
@@ -69,7 +69,7 @@
 					</tr>
 					<tr>
 						<th>COMMITTEE</th>
-						<td>Strategy and Finance Committee ; Special Committee on Confirmation Hearing on the Nomination of Prime Minister</td>
+						<td>Strategy and Finance Committee</td>
 					</tr>
 					<tr>
 						<th>CITY OR PROVINCE</th>
