--- a/www.assembly.go.kr/ac1f9c30b9f00038f8001fd1083b6f0db02b3748.html
+++ b/www.assembly.go.kr/ac1f9c30b9f00038f8001fd1083b6f0db02b3748.html
@@ -181,7 +181,7 @@
 							<dd>경기 용인시정</dd>
 							<dt>소속위원회</dt>
 							<dd>
-																									안전행정위원회
+																									교육문화체육관광위원회
 																								</dd>
 							<dt>당선횟수</dt>
 							<dd>초선(
