200 OK http://www.assembly.go.kr/assm/memPop/memPopup.do?dept_cd=9770921

--- a/www.assembly.go.kr/79988c70d6ffaae76441971508d0492a85fd6a1a.html
+++ b/www.assembly.go.kr/79988c70d6ffaae76441971508d0492a85fd6a1a.html
@@ -218,7 +218,7 @@
 							<dd>
 								    								    									전예은
     									    										 ,
-    									    								    									이상걸
+    									    								    									김현진
     									    										 ,
     									    								    									윤지원
     									    																							</dd>
