200 OK http://www.assembly.go.kr/assm/memPop/memPopup.do?dept_cd=9770967

--- a/www.assembly.go.kr/791a21d0e1b483bafe8a7e5b26a2c6e298602cfa.html
+++ b/www.assembly.go.kr/791a21d0e1b483bafe8a7e5b26a2c6e298602cfa.html
@@ -204,15 +204,15 @@
 							<dd>songyounggil@naver.com</dd>
 							<dt>보좌관</dt>
 							<dd>
-																	서해동
+																	서해동,유명식
 															</dd>
 							<dt>비서관</dt>
 							<dd>
-																	이경복
+																	이경복,심춘화
 															</dd>
 							<dt>비서</dt>
 							<dd>
-																	심춘화,문세종,신택수,오현숙
+																	고인섭,문세종,신택수
 															</dd>
 							<dt>취미, 특기</dt>
 							<dd></dd>
