200 OK http://korea.assembly.go.kr/mem/mem_pro.jsp?mem_code=KfSyaU7W2pM=

--- a/korea.assembly.go.kr/402c1fbc1c6404dec803a404693a49b010e49fe5.html
+++ b/korea.assembly.go.kr/402c1fbc1c6404dec803a404693a49b010e49fe5.html
@@ -69,7 +69,7 @@
 					</tr>
 					<tr>
 						<th>COMMITTEE</th>
-						<td>Special Committee on Budget & Accounts ; Land, Infrastructure, and Transport Committee ; Special Committee on Confirmation Hearing on the Nomination of Prime Minister ; Special Committee on Inter-Korean Reconciliation</td>
+						<td>Special Committee on Budget & Accounts ; Land, Infrastructure, and Transport Committee ; Special Committee on Inter-Korean Reconciliation</td>
 					</tr>
 					<tr>
 						<th>CITY OR PROVINCE</th>
