200 OK http://www.assembly.go.kr/assm/memPop/memPopup.do?dept_cd=9770874

--- a/www.assembly.go.kr/5b57f60461c8eab83a586a06a70149356f70b5a7.html
+++ b/www.assembly.go.kr/5b57f60461c8eab83a586a06a70149356f70b5a7.html
@@ -201,6 +201,8 @@
 							<dt>비서관</dt>
 							<dd>
 								    								    									채백련
+    									    										 ,
+    									    								    									홍윤표
     									    																							</dd>
 							<dt>비서</dt>
 							<dd>
