200 OK http://www.assembly.go.kr/assm/memPop/memPopup.do?dept_cd=9771010

--- a/www.assembly.go.kr/fb4cc9d69beeb01587c73e10956c291f8ff73311.html
+++ b/www.assembly.go.kr/fb4cc9d69beeb01587c73e10956c291f8ff73311.html
@@ -205,6 +205,8 @@
 								    								    									이경식
     									    										 ,
     									    								    									김진영
+    									    										 ,
+    									    								    									고은아
     									    																							</dd>
 							<dt>취미, 특기</dt>
 							<dd></dd>
