200 OK http://www.assembly.go.kr/assm/memPop/memPopup.do?dept_cd=9771060

--- a/www.assembly.go.kr/87c9f0ed66570df1ba8ed448204905e16cb47bb3.html
+++ b/www.assembly.go.kr/87c9f0ed66570df1ba8ed448204905e16cb47bb3.html
@@ -156,7 +156,7 @@
 						<dl class="per_history">
 							<dt>약력</dt>
 							<dd tabindex="0">
-								(現) 20대 더불어민주당 비례대표<br />(現)국회 안전행정위원회 위원<br />(現)국회 운영위원회 위원<br />(現)더불어민주당 원내대변인<br /><br />민주사회를 위한 변호사 모임 사무차장<br />참여연대 공익법센터 운영위원<br />세계 시각장애인 경기대회 조직위원회 조직위원 겸 감사<br />민주사회를 위한 변호사 모임 언론위원회 위원<br />사법연수원 35기<br />
+								(現) 20대 더불어민주당 비례대표<br />(現)국회 안전행정위원회 위원<br />(前)국회 운영위원회 위원<br />(前)더불어민주당 원내대변인<br /><br />민주사회를 위한 변호사 모임 사무차장<br />참여연대 공익법센터 운영위원<br />세계 시각장애인 경기대회 조직위원회 조직위원 겸 감사<br />민주사회를 위한 변호사 모임 언론위원회 위원<br />사법연수원 35기<br />
 							</dd>
 						</dl>
 						<!-- //약력 -->
@@ -186,7 +186,7 @@
 							<dd>leejjlaw@gmail.com</dd>
 							<dt>보좌관</dt>
 							<dd>
-																	김민식,형현기
+																	형현기
 															</dd>
 							<dt>비서관</dt>
 							<dd>
@@ -194,7 +194,7 @@
 															</dd>
 							<dt>비서</dt>
 							<dd>
-																	김수철,고나형,안승길,정재성
+																	김수철,고나형,안승길,정재성,박하늘
 															</dd>
 							<dt>취미, 특기</dt>
 							<dd></dd>
