200 OK http://www.assembly.go.kr/assm/memPop/memPopup.do?dept_cd=9770867

--- a/www.assembly.go.kr/184425def2b409e94372cfe11a87b29afff61f69.html
+++ b/www.assembly.go.kr/184425def2b409e94372cfe11a87b29afff61f69.html
@@ -210,7 +210,7 @@
 							<dd>
 								    								    									김상인
     									    										 ,
-    									    								    									이상경
+    									    								    									남궁형
     									    																							</dd>
 							<dt>비서</dt>
 							<dd>
