200 OK http://www.assembly.go.kr/assm/memPop/memPopup.do?dept_cd=9770986

--- a/www.assembly.go.kr/12bde84da3536356b8027c8c5f77f2f48ccb181f.html
+++ b/www.assembly.go.kr/12bde84da3536356b8027c8c5f77f2f48ccb181f.html
@@ -200,6 +200,8 @@
 							<dd>
 								    								    									김현목
     									    										 ,
+    									    								    									박태순
+    									    										 ,
     									    								    									정대수
     									    																							</dd>
 							<dt>비서관</dt>
