200 OK http://www.assembly.go.kr/assm/memPop/memPopup.do?dept_cd=9770878

--- a/www.assembly.go.kr/eca29cc26ec165958873c26907ddb63be6531869.html
+++ b/www.assembly.go.kr/eca29cc26ec165958873c26907ddb63be6531869.html
@@ -221,6 +221,8 @@
 								    								    									이기진
     									    										 ,
     									    								    									최이슬
+    									    										 ,
+    									    								    									강미영
     									    																							</dd>
 							<dt>취미, 특기</dt>
 							<dd>등산, 배드민턴</dd>
