200 OK http://korea.assembly.go.kr/mem/mem_pro.jsp?mem_code=p%2B9sFFPRsMc=

--- a/korea.assembly.go.kr/8b27948b631767dadd5b384a899f034c1b415238.html
+++ b/korea.assembly.go.kr/8b27948b631767dadd5b384a899f034c1b415238.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://www.usekky.com" target="_blank">http://www.usekky.com</a></td>
+							<td style="word-break:break-all;"><a href="http://www.usekky.com" target="_blank">http://www.usekky.com</a></td>
 						</tr>
 					</tbody>
 				</table>
