--- a/korea.assembly.go.kr/43cd5233998dec409e2e40137a8820f41d96096b.html
+++ b/korea.assembly.go.kr/43cd5233998dec409e2e40137a8820f41d96096b.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="" target="_blank"></a></td>
+							<td style="word-break:break-all;"><a href="" target="_blank"></a></td>
 						</tr>
 					</tbody>
 				</table>
