200 OK http://korea.assembly.go.kr/mem/mem_pro.jsp?mem_code=7aMT9E7JuTc=

--- a/korea.assembly.go.kr/a29a54d1943a5e77d98a7c1dd56a81f26230bc22.html
+++ b/korea.assembly.go.kr/a29a54d1943a5e77d98a7c1dd56a81f26230bc22.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://mskim.co.kr" target="_blank">http://mskim.co.kr</a></td>
+							<td style="word-break:break-all;"><a href="http://mskim.co.kr" target="_blank">http://mskim.co.kr</a></td>
 						</tr>
 					</tbody>
 				</table>
