--- a/korea.assembly.go.kr/530826bb5ca8cecb2ce2ec6aa373aa0f4377ffd5.html
+++ b/korea.assembly.go.kr/530826bb5ca8cecb2ce2ec6aa373aa0f4377ffd5.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://www.vitamin21.or.kr" target="_blank">http://www.vitamin21.or.kr</a></td>
+							<td style="word-break:break-all;"><a href="http://www.vitamin21.or.kr" target="_blank">http://www.vitamin21.or.kr</a></td>
 						</tr>
 					</tbody>
 				</table>
