--- a/korea.assembly.go.kr/9ec02d877fc70e964cb628114fbd5774be712f69.html
+++ b/korea.assembly.go.kr/9ec02d877fc70e964cb628114fbd5774be712f69.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="" target="_blank"></a></td>
+							<td style="word-break:break-all;"><a href="" target="_blank"></a></td>
 						</tr>
 					</tbody>
 				</table>
