200 OK http://korea.assembly.go.kr/mem/mem_pro.jsp?mem_code=MnjbIP/5w64=

--- a/korea.assembly.go.kr/f511eaeded788abf4935b455c025a7c68f8aee9a.html
+++ b/korea.assembly.go.kr/f511eaeded788abf4935b455c025a7c68f8aee9a.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://cleankim.kr/" target="_blank">http://cleankim.kr/</a></td>
+							<td style="word-break:break-all;"><a href="http://cleankim.kr/" target="_blank">http://cleankim.kr/</a></td>
 						</tr>
 					</tbody>
 				</table>
