200 OK http://korea.assembly.go.kr/mem/mem_pro.jsp?mem_code=j2WTxhLCy1M=

--- a/korea.assembly.go.kr/adb76e63a3c463759d7ab3f7b6bfc3389a3d7f1e.html
+++ b/korea.assembly.go.kr/adb76e63a3c463759d7ab3f7b6bfc3389a3d7f1e.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://kimsh.or.kr" target="_blank">http://kimsh.or.kr</a></td>
+							<td style="word-break:break-all;"><a href="http://kimsh.or.kr" target="_blank">http://kimsh.or.kr</a></td>
 						</tr>
 					</tbody>
 				</table>
