--- a/korea.assembly.go.kr/43c34a4ff9f8c110cc1ff80dd444d65ece5f31eb.html
+++ b/korea.assembly.go.kr/43c34a4ff9f8c110cc1ff80dd444d65ece5f31eb.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="" target="_blank"></a></td>
+							<td style="word-break:break-all;"><a href="" target="_blank"></a></td>
 						</tr>
 					</tbody>
 				</table>
