--- a/www.assembly.go.kr/6e55c98020146783a7d7e287cca71fcc1a89c4a4.html
+++ b/www.assembly.go.kr/6e55c98020146783a7d7e287cca71fcc1a89c4a4.html
@@ -211,6 +211,8 @@
 							<dd>
 								    								    									유지민
     									    										 ,
+    									    								    									정승현
+    									    										 ,
     									    								    									김윤미
     									    																							</dd>
 							<dt>취미, 특기</dt>
