--- a/korea.assembly.go.kr/18f16c505cd042cb10f0ee39dc160b1a5fff5fbe.html
+++ b/korea.assembly.go.kr/18f16c505cd042cb10f0ee39dc160b1a5fff5fbe.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://blog.naver.com/podoriksk" target="_blank">http://blog.naver.com/podoriksk</a></td>
+							<td style="word-break:break-all;"><a href="http://blog.naver.com/podoriksk" target="_blank">http://blog.naver.com/podoriksk</a></td>
 						</tr>
 					</tbody>
 				</table>
