--- a/korea.assembly.go.kr/90b5b4d44a641c8a6405a69fbfc6880600cbcf49.html
+++ b/korea.assembly.go.kr/90b5b4d44a641c8a6405a69fbfc6880600cbcf49.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://www.kimseondong.com" target="_blank">http://www.kimseondong.com</a></td>
+							<td style="word-break:break-all;"><a href="http://www.kimseondong.com" target="_blank">http://www.kimseondong.com</a></td>
 						</tr>
 					</tbody>
 				</table>
