--- a/korea.assembly.go.kr/8b3040fdc6ef4e6d98ee876f2b63829e82d4dc1e.html
+++ b/korea.assembly.go.kr/8b3040fdc6ef4e6d98ee876f2b63829e82d4dc1e.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://www.ksy.or.kr" target="_blank">http://www.ksy.or.kr</a></td>
+							<td style="word-break:break-all;"><a href="http://www.ksy.or.kr" target="_blank">http://www.ksy.or.kr</a></td>
 						</tr>
 					</tbody>
 				</table>
