--- a/korea.assembly.go.kr/ac1a8a669582ce8d908923c85bdd4cf593b0317e.html
+++ b/korea.assembly.go.kr/ac1a8a669582ce8d908923c85bdd4cf593b0317e.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://okkimss.com" target="_blank">http://okkimss.com</a></td>
+							<td style="word-break:break-all;"><a href="http://okkimss.com" target="_blank">http://okkimss.com</a></td>
 						</tr>
 					</tbody>
 				</table>
