200 OK http://korea.assembly.go.kr/mem/mem_pro.jsp?mem_code=VgORs/8yNJE=

--- a/korea.assembly.go.kr/988a0e97c41f6b1d8c1f47277189938e21aa6063.html
+++ b/korea.assembly.go.kr/988a0e97c41f6b1d8c1f47277189938e21aa6063.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://suminkim.net" target="_blank">http://suminkim.net</a></td>
+							<td style="word-break:break-all;"><a href="http://suminkim.net" target="_blank">http://suminkim.net</a></td>
 						</tr>
 					</tbody>
 				</table>
