--- a/korea.assembly.go.kr/bb41938aea0f9f83fd2938054331ce829145ee2e.html
+++ b/korea.assembly.go.kr/bb41938aea0f9f83fd2938054331ce829145ee2e.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://www.winkst.org" target="_blank">http://www.winkst.org</a></td>
+							<td style="word-break:break-all;"><a href="http://www.winkst.org" target="_blank">http://www.winkst.org</a></td>
 						</tr>
 					</tbody>
 				</table>
