--- a/korea.assembly.go.kr/0dfd1c3c9f1c5afd84ab1bed6ba50ce36c2dd0fa.html
+++ b/korea.assembly.go.kr/0dfd1c3c9f1c5afd84ab1bed6ba50ce36c2dd0fa.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://blog.naver.com/v0413ksw" target="_blank">http://blog.naver.com/v0413ksw</a></td>
+							<td style="word-break:break-all;"><a href="http://blog.naver.com/v0413ksw" target="_blank">http://blog.naver.com/v0413ksw</a></td>
 						</tr>
 					</tbody>
 				</table>
