200 OK http://www.assembly.go.kr/assm/memPop/memPopup.do?dept_cd=9770985

--- a/www.assembly.go.kr/b113d763564cb6fc1691b8a60948101a44763064.html
+++ b/www.assembly.go.kr/b113d763564cb6fc1691b8a60948101a44763064.html
@@ -197,7 +197,7 @@
 							<dd>
 								    								    									권영기
     									    										 ,
-    									    								    									김준표
+    									    								    									김경한
     									    																							</dd>
 							<dt>비서</dt>
 							<dd>
