--- a/korea.assembly.go.kr/0dd92a1102f4d4d6366664f575cea46ad13b84ef.html
+++ b/korea.assembly.go.kr/0dd92a1102f4d4d6366664f575cea46ad13b84ef.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://www.ktn21.com" target="_blank">http://www.ktn21.com</a></td>
+							<td style="word-break:break-all;"><a href="http://www.ktn21.com" target="_blank">http://www.ktn21.com</a></td>
 						</tr>
 					</tbody>
 				</table>
