--- a/korea.assembly.go.kr/462f3c62a5af030c4403ba07b8758c66bb972821.html
+++ b/korea.assembly.go.kr/462f3c62a5af030c4403ba07b8758c66bb972821.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://www.YTNetwork.or.kr" target="_blank">http://www.YTNetwork.or.kr</a></td>
+							<td style="word-break:break-all;"><a href="http://www.YTNetwork.or.kr" target="_blank">http://www.YTNetwork.or.kr</a></td>
 						</tr>
 					</tbody>
 				</table>
