--- a/korea.assembly.go.kr/60054837595b8d26ba1b4c24852fc90596fd2020.html
+++ b/korea.assembly.go.kr/60054837595b8d26ba1b4c24852fc90596fd2020.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="" target="_blank"></a></td>
+							<td style="word-break:break-all;"><a href="" target="_blank"></a></td>
 						</tr>
 					</tbody>
 				</table>
