--- a/korea.assembly.go.kr/1123c99d2019172d9e50fb486e4db35c7caec4e2.html
+++ b/korea.assembly.go.kr/1123c99d2019172d9e50fb486e4db35c7caec4e2.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="" target="_blank"></a></td>
+							<td style="word-break:break-all;"><a href="" target="_blank"></a></td>
 						</tr>
 					</tbody>
 				</table>
