--- a/korea.assembly.go.kr/a5b6680edb836c3ec8b596bc6c7d1f7fc8b9c7fb.html
+++ b/korea.assembly.go.kr/a5b6680edb836c3ec8b596bc6c7d1f7fc8b9c7fb.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://www.youngjoo.kr" target="_blank">http://www.youngjoo.kr</a></td>
+							<td style="word-break:break-all;"><a href="http://www.youngjoo.kr" target="_blank">http://www.youngjoo.kr</a></td>
 						</tr>
 					</tbody>
 				</table>
