--- a/korea.assembly.go.kr/757a77f176dae34d89a96b9ada8240467b22d44b.html
+++ b/korea.assembly.go.kr/757a77f176dae34d89a96b9ada8240467b22d44b.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://blog.naver.com/yw2014" target="_blank">http://blog.naver.com/yw2014</a></td>
+							<td style="word-break:break-all;"><a href="http://blog.naver.com/yw2014" target="_blank">http://blog.naver.com/yw2014</a></td>
 						</tr>
 					</tbody>
 				</table>
