--- a/korea.assembly.go.kr/af7f97761cfafe557efdffe78e7a1994200d1a14.html
+++ b/korea.assembly.go.kr/af7f97761cfafe557efdffe78e7a1994200d1a14.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://blog.naver.com/ktheum" target="_blank">http://blog.naver.com/ktheum</a></td>
+							<td style="word-break:break-all;"><a href="http://blog.naver.com/ktheum" target="_blank">http://blog.naver.com/ktheum</a></td>
 						</tr>
 					</tbody>
 				</table>
