--- a/korea.assembly.go.kr/cbbb7d72c1379e4b042d9a0dea5c4cbcd72180f8.html
+++ b/korea.assembly.go.kr/cbbb7d72c1379e4b042d9a0dea5c4cbcd72180f8.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://blog.naver.com/kohyj64" target="_blank">http://blog.naver.com/kohyj64</a></td>
+							<td style="word-break:break-all;"><a href="http://blog.naver.com/kohyj64" target="_blank">http://blog.naver.com/kohyj64</a></td>
 						</tr>
 					</tbody>
 				</table>
