--- a/korea.assembly.go.kr/8315307fadf6fd8ded28e0e433148b14c185d413.html
+++ b/korea.assembly.go.kr/8315307fadf6fd8ded28e0e433148b14c185d413.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://www.ksdd.net" target="_blank">http://www.ksdd.net</a></td>
+							<td style="word-break:break-all;"><a href="http://www.ksdd.net" target="_blank">http://www.ksdd.net</a></td>
 						</tr>
 					</tbody>
 				</table>
