--- a/korea.assembly.go.kr/4d212038fccfd2f9f6a01fcfbfbfaf197cf36dae.html
+++ b/korea.assembly.go.kr/4d212038fccfd2f9f6a01fcfbfbfaf197cf36dae.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://blog.naver.com/k7wins" target="_blank">http://blog.naver.com/k7wins</a></td>
+							<td style="word-break:break-all;"><a href="http://blog.naver.com/k7wins" target="_blank">http://blog.naver.com/k7wins</a></td>
 						</tr>
 					</tbody>
 				</table>
