--- a/korea.assembly.go.kr/b0cb93fb49b522dcd5e02ade8b54ac42df21e589.html
+++ b/korea.assembly.go.kr/b0cb93fb49b522dcd5e02ade8b54ac42df21e589.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://keh.kr" target="_blank">http://keh.kr</a></td>
+							<td style="word-break:break-all;"><a href="http://keh.kr" target="_blank">http://keh.kr</a></td>
 						</tr>
 					</tbody>
 				</table>
