--- a/korea.assembly.go.kr/911817ee5eb9058af0d53ae9ba02b28aafafd158.html
+++ b/korea.assembly.go.kr/911817ee5eb9058af0d53ae9ba02b28aafafd158.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://www.sokchang.co.kr" target="_blank">http://www.sokchang.co.kr</a></td>
+							<td style="word-break:break-all;"><a href="http://www.sokchang.co.kr" target="_blank">http://www.sokchang.co.kr</a></td>
 						</tr>
 					</tbody>
 				</table>
