--- a/korea.assembly.go.kr/d958bc83603c6e7dbfd9f03ab52a17ad884d4395.html
+++ b/korea.assembly.go.kr/d958bc83603c6e7dbfd9f03ab52a17ad884d4395.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="" target="_blank"></a></td>
+							<td style="word-break:break-all;"><a href="" target="_blank"></a></td>
 						</tr>
 					</tbody>
 				</table>
