--- a/korea.assembly.go.kr/12c03f396c58f355dbe44e04eaa0613cefc9fde0.html
+++ b/korea.assembly.go.kr/12c03f396c58f355dbe44e04eaa0613cefc9fde0.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://leecy.or.kr" target="_blank">http://leecy.or.kr</a></td>
+							<td style="word-break:break-all;"><a href="http://leecy.or.kr" target="_blank">http://leecy.or.kr</a></td>
 						</tr>
 					</tbody>
 				</table>
