--- a/korea.assembly.go.kr/cd24efa071529e2fc922ccd78047fccf4144f0f6.html
+++ b/korea.assembly.go.kr/cd24efa071529e2fc922ccd78047fccf4144f0f6.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://www.이채익.com" target="_blank">http://www.이채익.com</a></td>
+							<td style="word-break:break-all;"><a href="http://www.이채익.com" target="_blank">http://www.이채익.com</a></td>
 						</tr>
 					</tbody>
 				</table>
