--- a/korea.assembly.go.kr/f2c43b34f8d217d16c6940bb1afc593f3186bfc4.html
+++ b/korea.assembly.go.kr/f2c43b34f8d217d16c6940bb1afc593f3186bfc4.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://www.leecw.pe.kr/" target="_blank">http://www.leecw.pe.kr/</a></td>
+							<td style="word-break:break-all;"><a href="http://www.leecw.pe.kr/" target="_blank">http://www.leecw.pe.kr/</a></td>
 						</tr>
 					</tbody>
 				</table>
