--- a/korea.assembly.go.kr/979d642ee5705631736bf3a060b20c2d25837dec.html
+++ b/korea.assembly.go.kr/979d642ee5705631736bf3a060b20c2d25837dec.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://www.ebyon.com" target="_blank">http://www.ebyon.com</a></td>
+							<td style="word-break:break-all;"><a href="http://www.ebyon.com" target="_blank">http://www.ebyon.com</a></td>
 						</tr>
 					</tbody>
 				</table>
