--- a/korea.assembly.go.kr/1476c1211ee7c00723af01e0205ab7576a67a15e.html
+++ b/korea.assembly.go.kr/1476c1211ee7c00723af01e0205ab7576a67a15e.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="" target="_blank"></a></td>
+							<td style="word-break:break-all;"><a href="" target="_blank"></a></td>
 						</tr>
 					</tbody>
 				</table>
