--- a/korea.assembly.go.kr/da3de7cad3e6940ee3baeb4ea320713932f04571.html
+++ b/korea.assembly.go.kr/da3de7cad3e6940ee3baeb4ea320713932f04571.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://blog.naver.com/nowoncap" target="_blank">http://blog.naver.com/nowoncap</a></td>
+							<td style="word-break:break-all;"><a href="http://blog.naver.com/nowoncap" target="_blank">http://blog.naver.com/nowoncap</a></td>
 						</tr>
 					</tbody>
 				</table>
