--- a/korea.assembly.go.kr/92c1c09afa3277dd836b846bf5f05734053be18d.html
+++ b/korea.assembly.go.kr/92c1c09afa3277dd836b846bf5f05734053be18d.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="" target="_blank"></a></td>
+							<td style="word-break:break-all;"><a href="" target="_blank"></a></td>
 						</tr>
 					</tbody>
 				</table>
