200 OK http://korea.assembly.go.kr/mem/mem_pro.jsp?mem_code=Rp2K02wOKpQ=

--- a/korea.assembly.go.kr/f6227d839e90b71b5b317f53e848ba4f67220275.html
+++ b/korea.assembly.go.kr/f6227d839e90b71b5b317f53e848ba4f67220275.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://blog.naver.com/leeek1105" target="_blank">http://blog.naver.com/leeek1105</a></td>
+							<td style="word-break:break-all;"><a href="http://blog.naver.com/leeek1105" target="_blank">http://blog.naver.com/leeek1105</a></td>
 						</tr>
 					</tbody>
 				</table>
