200 OK http://korea.assembly.go.kr/mem/mem_pro.jsp?mem_code=y4Jw9wa6KSk=

--- a/korea.assembly.go.kr/7e9f38e54d4e9bac6762b6bc642c2281ae0d5c3f.html
+++ b/korea.assembly.go.kr/7e9f38e54d4e9bac6762b6bc642c2281ae0d5c3f.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://ofthepeople.kr" target="_blank">http://ofthepeople.kr</a></td>
+							<td style="word-break:break-all;"><a href="http://ofthepeople.kr" target="_blank">http://ofthepeople.kr</a></td>
 						</tr>
 					</tbody>
 				</table>
