200 OK http://korea.assembly.go.kr/mem/mem_pro.jsp?mem_code=fH30pURZgmU=

--- a/korea.assembly.go.kr/c279b5c7aa5f471fbe4d437cfe46794fdb2f18bc.html
+++ b/korea.assembly.go.kr/c279b5c7aa5f471fbe4d437cfe46794fdb2f18bc.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://www.hopechan.kr" target="_blank">http://www.hopechan.kr</a></td>
+							<td style="word-break:break-all;"><a href="http://www.hopechan.kr" target="_blank">http://www.hopechan.kr</a></td>
 						</tr>
 					</tbody>
 				</table>
