--- a/korea.assembly.go.kr/55ef88184c22540e8c593ce7bf45af518ea661f8.html
+++ b/korea.assembly.go.kr/55ef88184c22540e8c593ce7bf45af518ea661f8.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://www.leehj.net" target="_blank">http://www.leehj.net</a></td>
+							<td style="word-break:break-all;"><a href="http://www.leehj.net" target="_blank">http://www.leehj.net</a></td>
 						</tr>
 					</tbody>
 				</table>
