--- a/korea.assembly.go.kr/5a1f6d5459aa530e0daa91f6c78dc5148b4730b2.html
+++ b/korea.assembly.go.kr/5a1f6d5459aa530e0daa91f6c78dc5148b4730b2.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://blog.naver.com/woogyoo" target="_blank">http://blog.naver.com/woogyoo</a></td>
+							<td style="word-break:break-all;"><a href="http://blog.naver.com/woogyoo" target="_blank">http://blog.naver.com/woogyoo</a></td>
 						</tr>
 					</tbody>
 				</table>
