--- a/korea.assembly.go.kr/851011a637fa3a7a291671c516d96552b0f26ec4.html
+++ b/korea.assembly.go.kr/851011a637fa3a7a291671c516d96552b0f26ec4.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="" target="_blank"></a></td>
+							<td style="word-break:break-all;"><a href="" target="_blank"></a></td>
 						</tr>
 					</tbody>
 				</table>
