--- a/korea.assembly.go.kr/3da2c80dd22aca70e0ed820a3a61c9add17bb0e8.html
+++ b/korea.assembly.go.kr/3da2c80dd22aca70e0ed820a3a61c9add17bb0e8.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://leehyehoon.kr" target="_blank">http://leehyehoon.kr</a></td>
+							<td style="word-break:break-all;"><a href="http://leehyehoon.kr" target="_blank">http://leehyehoon.kr</a></td>
 						</tr>
 					</tbody>
 				</table>
