--- a/korea.assembly.go.kr/339a35edcaecdb1723de1b638a2993ce3798af5a.html
+++ b/korea.assembly.go.kr/339a35edcaecdb1723de1b638a2993ce3798af5a.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://www.lhj21.com" target="_blank">http://www.lhj21.com</a></td>
+							<td style="word-break:break-all;"><a href="http://www.lhj21.com" target="_blank">http://www.lhj21.com</a></td>
 						</tr>
 					</tbody>
 				</table>
