200 OK http://korea.assembly.go.kr/mem/mem_pro.jsp?mem_code=2X3MmUr5dGg=

--- a/korea.assembly.go.kr/c2f62830a5a626efbed6bf2243ff29f578806782.html
+++ b/korea.assembly.go.kr/c2f62830a5a626efbed6bf2243ff29f578806782.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://www.inyoung.net" target="_blank">http://www.inyoung.net</a></td>
+							<td style="word-break:break-all;"><a href="http://www.inyoung.net" target="_blank">http://www.inyoung.net</a></td>
 						</tr>
 					</tbody>
 				</table>
