--- a/korea.assembly.go.kr/720529d54a539dab99fbc6fb415fe1bf4bfc04aa.html
+++ b/korea.assembly.go.kr/720529d54a539dab99fbc6fb415fe1bf4bfc04aa.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://blog.naver.com/leejjlaw" target="_blank">http://blog.naver.com/leejjlaw</a></td>
+							<td style="word-break:break-all;"><a href="http://blog.naver.com/leejjlaw" target="_blank">http://blog.naver.com/leejjlaw</a></td>
 						</tr>
 					</tbody>
 				</table>
