--- a/korea.assembly.go.kr/838420c26ecb5a5dc4b911addfe314a440765307.html
+++ b/korea.assembly.go.kr/838420c26ecb5a5dc4b911addfe314a440765307.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://blog.naver.com/jwoo37" target="_blank">http://blog.naver.com/jwoo37</a></td>
+							<td style="word-break:break-all;"><a href="http://blog.naver.com/jwoo37" target="_blank">http://blog.naver.com/jwoo37</a></td>
 						</tr>
 					</tbody>
 				</table>
