200 OK http://korea.assembly.go.kr/mem/mem_pro.jsp?mem_code=YUkOlg1BnoQ=

--- a/korea.assembly.go.kr/81a5592c1f709790e3b25c46f336dd8cf2860918.html
+++ b/korea.assembly.go.kr/81a5592c1f709790e3b25c46f336dd8cf2860918.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://justice551.tistory.com" target="_blank">http://justice551.tistory.com</a></td>
+							<td style="word-break:break-all;"><a href="http://justice551.tistory.com" target="_blank">http://justice551.tistory.com</a></td>
 						</tr>
 					</tbody>
 				</table>
