--- a/korea.assembly.go.kr/827b04d07b86d55fc6d6dc038e9c2cd7f6a65e1f.html
+++ b/korea.assembly.go.kr/827b04d07b86d55fc6d6dc038e9c2cd7f6a65e1f.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://www.leejinbok.com/" target="_blank">http://www.leejinbok.com/</a></td>
+							<td style="word-break:break-all;"><a href="http://www.leejinbok.com/" target="_blank">http://www.leejinbok.com/</a></td>
 						</tr>
 					</tbody>
 				</table>
