--- a/korea.assembly.go.kr/94d6e9f3a59646a653e92f30c22ec3d14c0add9d.html
+++ b/korea.assembly.go.kr/94d6e9f3a59646a653e92f30c22ec3d14c0add9d.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="" target="_blank"></a></td>
+							<td style="word-break:break-all;"><a href="" target="_blank"></a></td>
 						</tr>
 					</tbody>
 				</table>
