--- a/korea.assembly.go.kr/b6445dfc5ecf6116406966f2013c5fdd15113d32.html
+++ b/korea.assembly.go.kr/b6445dfc5ecf6116406966f2013c5fdd15113d32.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="" target="_blank"></a></td>
+							<td style="word-break:break-all;"><a href="" target="_blank"></a></td>
 						</tr>
 					</tbody>
 				</table>
