--- a/korea.assembly.go.kr/8efdb4dea440182b2f977942c71bf615986ab803.html
+++ b/korea.assembly.go.kr/8efdb4dea440182b2f977942c71bf615986ab803.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://www.ljk.co.kr" target="_blank">http://www.ljk.co.kr</a></td>
+							<td style="word-break:break-all;"><a href="http://www.ljk.co.kr" target="_blank">http://www.ljk.co.kr</a></td>
 						</tr>
 					</tbody>
 				</table>
