--- a/korea.assembly.go.kr/dc80d40a1b321204c077dd31ea94e53e49f6c3c7.html
+++ b/korea.assembly.go.kr/dc80d40a1b321204c077dd31ea94e53e49f6c3c7.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="" target="_blank"></a></td>
+							<td style="word-break:break-all;"><a href="" target="_blank"></a></td>
 						</tr>
 					</tbody>
 				</table>
