200 OK http://korea.assembly.go.kr/mem/mem_pro.jsp?mem_code=3vezcm8ZN7E=

--- a/korea.assembly.go.kr/1fb6c6c5f477eca68694e546fdd82c3b570f77ab.html
+++ b/korea.assembly.go.kr/1fb6c6c5f477eca68694e546fdd82c3b570f77ab.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://www.이정현.com" target="_blank">http://www.이정현.com</a></td>
+							<td style="word-break:break-all;"><a href="http://www.이정현.com" target="_blank">http://www.이정현.com</a></td>
 						</tr>
 					</tbody>
 				</table>
