200 OK http://korea.assembly.go.kr/mem/mem_pro.jsp?mem_code=6lJa46mDEIY=

--- a/korea.assembly.go.kr/3f450c071f9ba5b0b88e2f7f7e5f8d7c4e2abd49.html
+++ b/korea.assembly.go.kr/3f450c071f9ba5b0b88e2f7f7e5f8d7c4e2abd49.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://www.newmasan.com" target="_blank">http://www.newmasan.com</a></td>
+							<td style="word-break:break-all;"><a href="http://www.newmasan.com" target="_blank">http://www.newmasan.com</a></td>
 						</tr>
 					</tbody>
 				</table>
