200 OK http://korea.assembly.go.kr/mem/mem_pro.jsp?mem_code=wv9j04XpP/w=

--- a/korea.assembly.go.kr/f9ff8d1e93f81b7189dc502e0287b750f8044670.html
+++ b/korea.assembly.go.kr/f9ff8d1e93f81b7189dc502e0287b750f8044670.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://www.leekh.kr" target="_blank">http://www.leekh.kr</a></td>
+							<td style="word-break:break-all;"><a href="http://www.leekh.kr" target="_blank">http://www.leekh.kr</a></td>
 						</tr>
 					</tbody>
 				</table>
