--- a/www.assembly.go.kr/585a781f21429998c8080baaf8349e0920ae3e1e.html
+++ b/www.assembly.go.kr/585a781f21429998c8080baaf8349e0920ae3e1e.html
@@ -199,24 +199,16 @@
 							<dd>yc20002@naver.com</dd>
 							<dt>보좌관</dt>
 							<dd>
-								    								    									강성우
-    									    										 ,
-    									    								    									박주학
-    									    																							</dd>
+																	강성우, 박주학
+															</dd>
 							<dt>비서관</dt>
 							<dd>
-								    								    									손영우
-    									    										 ,
-    									    								    									오범석
-    									    																							</dd>
+																	오범석, 손영우
+															</dd>
 							<dt>비서</dt>
 							<dd>
-								    								    									강보인
-    									    										 ,
-    									    								    									오장택
-    									    										 ,
-    									    								    									서주연
-    									    																							</dd>
+																	강보인, 오장택, 서주연
+															</dd>
 							<dt>취미, 특기</dt>
 							<dd></dd>
 						</dl>
