--- a/korea.assembly.go.kr/86925b3314ae52dfe7b9e90d892298323d6df25c.html
+++ b/korea.assembly.go.kr/86925b3314ae52dfe7b9e90d892298323d6df25c.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://www.mslee.co.kr/" target="_blank">http://www.mslee.co.kr/</a></td>
+							<td style="word-break:break-all;"><a href="http://www.mslee.co.kr/" target="_blank">http://www.mslee.co.kr/</a></td>
 						</tr>
 					</tbody>
 				</table>
