--- a/korea.assembly.go.kr/56f5d6f7fdce366920c69226bb69489ab95c4ff2.html
+++ b/korea.assembly.go.kr/56f5d6f7fdce366920c69226bb69489ab95c4ff2.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://blog.naver.com/sdl1951" target="_blank">http://blog.naver.com/sdl1951</a></td>
+							<td style="word-break:break-all;"><a href="http://blog.naver.com/sdl1951" target="_blank">http://blog.naver.com/sdl1951</a></td>
 						</tr>
 					</tbody>
 				</table>
