200 OK http://korea.assembly.go.kr/mem/mem_pro.jsp?mem_code=GhF4BKvuc2k=

--- a/korea.assembly.go.kr/5ef8913f6f7e3fb1958305600472fd9f4028fdec.html
+++ b/korea.assembly.go.kr/5ef8913f6f7e3fb1958305600472fd9f4028fdec.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://smlee.kr" target="_blank">http://smlee.kr</a></td>
+							<td style="word-break:break-all;"><a href="http://smlee.kr" target="_blank">http://smlee.kr</a></td>
 						</tr>
 					</tbody>
 				</table>
