200 OK http://korea.assembly.go.kr/mem/mem_pro.jsp?mem_code=vcrwHL2rZyA=

--- a/korea.assembly.go.kr/a1953fceb346ae43699405c0cda5fdfb991184df.html
+++ b/korea.assembly.go.kr/a1953fceb346ae43699405c0cda5fdfb991184df.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://blog.naver.com/lsh4yu" target="_blank">http://blog.naver.com/lsh4yu</a></td>
+							<td style="word-break:break-all;"><a href="http://blog.naver.com/lsh4yu" target="_blank">http://blog.naver.com/lsh4yu</a></td>
 						</tr>
 					</tbody>
 				</table>
