--- a/korea.assembly.go.kr/ef4dcbe492c9b12aba0e23c7df5358a488c3fc15.html
+++ b/korea.assembly.go.kr/ef4dcbe492c9b12aba0e23c7df5358a488c3fc15.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://blog.naver.com/shlee197520" target="_blank">http://blog.naver.com/shlee197520</a></td>
+							<td style="word-break:break-all;"><a href="http://blog.naver.com/shlee197520" target="_blank">http://blog.naver.com/shlee197520</a></td>
 						</tr>
 					</tbody>
 				</table>
