200 OK http://korea.assembly.go.kr/mem/mem_pro.jsp?mem_code=1sbNGyNgyvI=

--- a/korea.assembly.go.kr/44997a11d6b2bb02122a8580f3f358036ac96e27.html
+++ b/korea.assembly.go.kr/44997a11d6b2bb02122a8580f3f358036ac96e27.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://ltk2016635.blog.me" target="_blank">http://ltk2016635.blog.me</a></td>
+							<td style="word-break:break-all;"><a href="http://ltk2016635.blog.me" target="_blank">http://ltk2016635.blog.me</a></td>
 						</tr>
 					</tbody>
 				</table>
