200 OK http://korea.assembly.go.kr/mem/mem_pro.jsp?mem_code=F16GgrX7q2U=

--- a/korea.assembly.go.kr/4fd47885a02976d51ddf1327632d427d039c02a8.html
+++ b/korea.assembly.go.kr/4fd47885a02976d51ddf1327632d427d039c02a8.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://m.blog.naver.com/k041036" target="_blank">http://m.blog.naver.com/k041036</a></td>
+							<td style="word-break:break-all;"><a href="http://m.blog.naver.com/k041036" target="_blank">http://m.blog.naver.com/k041036</a></td>
 						</tr>
 					</tbody>
 				</table>
