--- a/korea.assembly.go.kr/c17ed50c5eda3b7c75bb1d7537b99291ac71a8ce.html
+++ b/korea.assembly.go.kr/c17ed50c5eda3b7c75bb1d7537b99291ac71a8ce.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://blog.naver.com/ewon33" target="_blank">http://blog.naver.com/ewon33</a></td>
+							<td style="word-break:break-all;"><a href="http://blog.naver.com/ewon33" target="_blank">http://blog.naver.com/ewon33</a></td>
 						</tr>
 					</tbody>
 				</table>
