--- a/korea.assembly.go.kr/affc043ae3b92f2506973a91b5d95bbd0cdbe1f7.html
+++ b/korea.assembly.go.kr/affc043ae3b92f2506973a91b5d95bbd0cdbe1f7.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://blog.naver.com/bravolwh" target="_blank">http://blog.naver.com/bravolwh</a></td>
+							<td style="word-break:break-all;"><a href="http://blog.naver.com/bravolwh" target="_blank">http://blog.naver.com/bravolwh</a></td>
 						</tr>
 					</tbody>
 				</table>
