--- a/korea.assembly.go.kr/ba31a92325bdbf4c9d1395a746453d3b97ddacea.html
+++ b/korea.assembly.go.kr/ba31a92325bdbf4c9d1395a746453d3b97ddacea.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="" target="_blank"></a></td>
+							<td style="word-break:break-all;"><a href="" target="_blank"></a></td>
 						</tr>
 					</tbody>
 				</table>
