200 OK http://korea.assembly.go.kr/mem/mem_pro.jsp?mem_code=ZRtwxEPJzqk=

--- a/korea.assembly.go.kr/cbe6dc6c1d2f5b872f5b071155170105f38bada3.html
+++ b/korea.assembly.go.kr/cbe6dc6c1d2f5b872f5b071155170105f38bada3.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://blog.naver.com/614lyh" target="_blank">http://blog.naver.com/614lyh</a></td>
+							<td style="word-break:break-all;"><a href="http://blog.naver.com/614lyh" target="_blank">http://blog.naver.com/614lyh</a></td>
 						</tr>
 					</tbody>
 				</table>
