--- a/korea.assembly.go.kr/4680942cdc9d4b9ae0f72ec6c969f74887e64e59.html
+++ b/korea.assembly.go.kr/4680942cdc9d4b9ae0f72ec6c969f74887e64e59.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://blog.naver.com/glyj532" target="_blank">http://blog.naver.com/glyj532</a></td>
+							<td style="word-break:break-all;"><a href="http://blog.naver.com/glyj532" target="_blank">http://blog.naver.com/glyj532</a></td>
 						</tr>
 					</tbody>
 				</table>
