200 OK http://korea.assembly.go.kr/mem/mem_pro.jsp?mem_code=Z6WJf2QDQRk=

--- a/korea.assembly.go.kr/7d795109af8d119cccaa9b023695152c82e1f2bf.html
+++ b/korea.assembly.go.kr/7d795109af8d119cccaa9b023695152c82e1f2bf.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://blog.naver.com/ijs5321" target="_blank">http://blog.naver.com/ijs5321</a></td>
+							<td style="word-break:break-all;"><a href="http://blog.naver.com/ijs5321" target="_blank">http://blog.naver.com/ijs5321</a></td>
 						</tr>
 					</tbody>
 				</table>
