--- a/korea.assembly.go.kr/2060cb062f4f5c23c221cf336e8599950b37e376.html
+++ b/korea.assembly.go.kr/2060cb062f4f5c23c221cf336e8599950b37e376.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://blog.naver.com/llj11" target="_blank">http://blog.naver.com/llj11</a></td>
+							<td style="word-break:break-all;"><a href="http://blog.naver.com/llj11" target="_blank">http://blog.naver.com/llj11</a></td>
 						</tr>
 					</tbody>
 				</table>
