--- a/korea.assembly.go.kr/cd9bebc4561a3f61cb07caf99618053b227ffbb3.html
+++ b/korea.assembly.go.kr/cd9bebc4561a3f61cb07caf99618053b227ffbb3.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://www.bdmin.net" target="_blank">http://www.bdmin.net</a></td>
+							<td style="word-break:break-all;"><a href="http://www.bdmin.net" target="_blank">http://www.bdmin.net</a></td>
 						</tr>
 					</tbody>
 				</table>
