200 OK http://korea.assembly.go.kr/mem/mem_pro.jsp?mem_code=N5Pwl6rD8MU=

--- a/korea.assembly.go.kr/5a2998d283939ba0edee3f41795f6e0859714233.html
+++ b/korea.assembly.go.kr/5a2998d283939ba0edee3f41795f6e0859714233.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://www.¹Î»ç¶û.com/" target="_blank">http://www.¹Î»ç¶û.com/</a></td>
+							<td style="word-break:break-all;"><a href="http://www.¹Î»ç¶û.com/" target="_blank">http://www.¹Î»ç¶û.com/</a></td>
 						</tr>
 					</tbody>
 				</table>
