--- a/korea.assembly.go.kr/42eadf9b2862a4d0c30b127edffc80552190efc3.html
+++ b/korea.assembly.go.kr/42eadf9b2862a4d0c30b127edffc80552190efc3.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="" target="_blank"></a></td>
+							<td style="word-break:break-all;"><a href="" target="_blank"></a></td>
 						</tr>
 					</tbody>
 				</table>
