200 OK http://korea.assembly.go.kr/mem/mem_pro.jsp?mem_code=ArepQG03ZJI=

--- a/korea.assembly.go.kr/c7a17871afe6a07c2e240bab71f66197a8eb41bd.html
+++ b/korea.assembly.go.kr/c7a17871afe6a07c2e240bab71f66197a8eb41bd.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://www.moonhs.net" target="_blank">http://www.moonhs.net</a></td>
+							<td style="word-break:break-all;"><a href="http://www.moonhs.net" target="_blank">http://www.moonhs.net</a></td>
 						</tr>
 					</tbody>
 				</table>
