--- a/korea.assembly.go.kr/ee468e9e2c3bde11ab776f95bdc0f05947ab7b81.html
+++ b/korea.assembly.go.kr/ee468e9e2c3bde11ab776f95bdc0f05947ab7b81.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="" target="_blank"></a></td>
+							<td style="word-break:break-all;"><a href="" target="_blank"></a></td>
 						</tr>
 					</tbody>
 				</table>
