--- a/korea.assembly.go.kr/7807dd94bc4dbfff31af1abe5540066d8ef3d080.html
+++ b/korea.assembly.go.kr/7807dd94bc4dbfff31af1abe5540066d8ef3d080.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://blog.naver.com/nakw63" target="_blank">http://blog.naver.com/nakw63</a></td>
+							<td style="word-break:break-all;"><a href="http://blog.naver.com/nakw63" target="_blank">http://blog.naver.com/nakw63</a></td>
 						</tr>
 					</tbody>
 				</table>
