--- a/www.assembly.go.kr/ba68addbf9005136df123a71837632c9dc3d44e8.html
+++ b/www.assembly.go.kr/ba68addbf9005136df123a71837632c9dc3d44e8.html
@@ -199,7 +199,7 @@
 							<dd>nakw@na.go.kr</dd>
 							<dt>보좌관</dt>
 							<dd>
-								    								    									김정태
+								    								    									김상환
     									    										 ,
     									    								    									김춘식
     									    																							</dd>
