--- a/korea.assembly.go.kr/fc10e6f7a0a281f579098c1baff3bd3fa6250d8b.html
+++ b/korea.assembly.go.kr/fc10e6f7a0a281f579098c1baff3bd3fa6250d8b.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://www.nisoon.co.kr " target="_blank">http://www.nisoon.co.kr </a></td>
+							<td style="word-break:break-all;"><a href="http://www.nisoon.co.kr " target="_blank">http://www.nisoon.co.kr </a></td>
 						</tr>
 					</tbody>
 				</table>
