200 OK http://korea.assembly.go.kr/mem/mem_pro.jsp?mem_code=skbIbq/WDPI=

--- a/korea.assembly.go.kr/80fce825c3411d74fc23cdd7bc959cd1add178aa.html
+++ b/korea.assembly.go.kr/80fce825c3411d74fc23cdd7bc959cd1add178aa.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://www.gowithwr.com" target="_blank">http://www.gowithwr.com</a></td>
+							<td style="word-break:break-all;"><a href="http://www.gowithwr.com" target="_blank">http://www.gowithwr.com</a></td>
 						</tr>
 					</tbody>
 				</table>
