--- a/korea.assembly.go.kr/58f003638ede753eb4f44d260c4fac09dd006a42.html
+++ b/korea.assembly.go.kr/58f003638ede753eb4f44d260c4fac09dd006a42.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="" target="_blank"></a></td>
+							<td style="word-break:break-all;"><a href="" target="_blank"></a></td>
 						</tr>
 					</tbody>
 				</table>
