--- a/korea.assembly.go.kr/6a9ac5caac724112725520ed123c1cf295bb48ee.html
+++ b/korea.assembly.go.kr/6a9ac5caac724112725520ed123c1cf295bb48ee.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="" target="_blank"></a></td>
+							<td style="word-break:break-all;"><a href="" target="_blank"></a></td>
 						</tr>
 					</tbody>
 				</table>
