--- a/korea.assembly.go.kr/c991ea2d4aaea7e99c06c43f3807e2d6e64e78e6.html
+++ b/korea.assembly.go.kr/c991ea2d4aaea7e99c06c43f3807e2d6e64e78e6.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="" target="_blank"></a></td>
+							<td style="word-break:break-all;"><a href="" target="_blank"></a></td>
 						</tr>
 					</tbody>
 				</table>
