--- a/korea.assembly.go.kr/2d5acd1495ea97dd5e9c6d5468604a80cfc758e4.html
+++ b/korea.assembly.go.kr/2d5acd1495ea97dd5e9c6d5468604a80cfc758e4.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://www.pbs21.or.kr" target="_blank">http://www.pbs21.or.kr</a></td>
+							<td style="word-break:break-all;"><a href="http://www.pbs21.or.kr" target="_blank">http://www.pbs21.or.kr</a></td>
 						</tr>
 					</tbody>
 				</table>
