--- a/korea.assembly.go.kr/fe2759c5a571aad1213fe3b420f6bd65a988dc19.html
+++ b/korea.assembly.go.kr/fe2759c5a571aad1213fe3b420f6bd65a988dc19.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="" target="_blank"></a></td>
+							<td style="word-break:break-all;"><a href="" target="_blank"></a></td>
 						</tr>
 					</tbody>
 				</table>
