200 OK http://korea.assembly.go.kr/mem/mem_pro.jsp?mem_code=L0B37ln/%2Be8=

--- a/korea.assembly.go.kr/ea10566465ba6473a13e78ce2baa6a6bf872ebd7.html
+++ b/korea.assembly.go.kr/ea10566465ba6473a13e78ce2baa6a6bf872ebd7.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://blog.naver.com/pjh0586" target="_blank">http://blog.naver.com/pjh0586</a></td>
+							<td style="word-break:break-all;"><a href="http://blog.naver.com/pjh0586" target="_blank">http://blog.naver.com/pjh0586</a></td>
 						</tr>
 					</tbody>
 				</table>
