--- a/korea.assembly.go.kr/974b7dcdcb47d11ef937f5da1be3a0cd33e6e5bb.html
+++ b/korea.assembly.go.kr/974b7dcdcb47d11ef937f5da1be3a0cd33e6e5bb.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://blog.naver.com/pjkorea21c" target="_blank">http://blog.naver.com/pjkorea21c</a></td>
+							<td style="word-break:break-all;"><a href="http://blog.naver.com/pjkorea21c" target="_blank">http://blog.naver.com/pjkorea21c</a></td>
 						</tr>
 					</tbody>
 				</table>
