--- a/korea.assembly.go.kr/d6a3f72e019994f2e8afb5e4507ffbc4bec04922.html
+++ b/korea.assembly.go.kr/d6a3f72e019994f2e8afb5e4507ffbc4bec04922.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://www.jwp615.com" target="_blank">http://www.jwp615.com</a></td>
+							<td style="word-break:break-all;"><a href="http://www.jwp615.com" target="_blank">http://www.jwp615.com</a></td>
 						</tr>
 					</tbody>
 				</table>
