200 OK http://korea.assembly.go.kr/mem/mem_pro.jsp?mem_code=XHoyWpqAz58=

--- a/korea.assembly.go.kr/d85acb04764d508e6e8acdb6c402db947a7e245d.html
+++ b/korea.assembly.go.kr/d85acb04764d508e6e8acdb6c402db947a7e245d.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://parkjoonyung.kr" target="_blank">http://parkjoonyung.kr</a></td>
+							<td style="word-break:break-all;"><a href="http://parkjoonyung.kr" target="_blank">http://parkjoonyung.kr</a></td>
 						</tr>
 					</tbody>
 				</table>
