200 OK http://korea.assembly.go.kr/mem/mem_pro.jsp?mem_code=7moO3q7G7oI=

--- a/korea.assembly.go.kr/7c6b7a6c6bd8929f0fd4bc5a6550ae0a6c472256.html
+++ b/korea.assembly.go.kr/7c6b7a6c6bd8929f0fd4bc5a6550ae0a6c472256.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://www.parkjoosun.pe.kr" target="_blank">http://www.parkjoosun.pe.kr</a></td>
+							<td style="word-break:break-all;"><a href="http://www.parkjoosun.pe.kr" target="_blank">http://www.parkjoosun.pe.kr</a></td>
 						</tr>
 					</tbody>
 				</table>
