--- a/korea.assembly.go.kr/a352f61910f55b21c8d2d2fec9210ec30b38a785.html
+++ b/korea.assembly.go.kr/a352f61910f55b21c8d2d2fec9210ec30b38a785.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://www.joomincenter.com" target="_blank">http://www.joomincenter.com</a></td>
+							<td style="word-break:break-all;"><a href="http://www.joomincenter.com" target="_blank">http://www.joomincenter.com</a></td>
 						</tr>
 					</tbody>
 				</table>
