--- a/korea.assembly.go.kr/da95d1bd28716fa3edd7729fd6acaf95639cd832.html
+++ b/korea.assembly.go.kr/da95d1bd28716fa3edd7729fd6acaf95639cd832.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://blog.naver.com/parknamchun" target="_blank">http://blog.naver.com/parknamchun</a></td>
+							<td style="word-break:break-all;"><a href="http://blog.naver.com/parknamchun" target="_blank">http://blog.naver.com/parknamchun</a></td>
 						</tr>
 					</tbody>
 				</table>
