200 OK http://korea.assembly.go.kr/mem/mem_pro.jsp?mem_code=G5LBAJokQcY=

--- a/korea.assembly.go.kr/6074965d037c422e14f921ab00b1fc7e9a0b7759.html
+++ b/korea.assembly.go.kr/6074965d037c422e14f921ab00b1fc7e9a0b7759.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://blog.pys21.net" target="_blank">http://blog.pys21.net</a></td>
+							<td style="word-break:break-all;"><a href="http://blog.pys21.net" target="_blank">http://blog.pys21.net</a></td>
 						</tr>
 					</tbody>
 				</table>
