200 OK http://korea.assembly.go.kr/mem/mem_pro.jsp?mem_code=hoB5/199Ap8=

--- a/korea.assembly.go.kr/7ab1cded5ca240e0db2e201cb5e7ddbdd2fe9974.html
+++ b/korea.assembly.go.kr/7ab1cded5ca240e0db2e201cb5e7ddbdd2fe9974.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://omychans.tistory.com/" target="_blank">http://omychans.tistory.com/</a></td>
+							<td style="word-break:break-all;"><a href="http://omychans.tistory.com/" target="_blank">http://omychans.tistory.com/</a></td>
 						</tr>
 					</tbody>
 				</table>
