200 OK http://korea.assembly.go.kr/mem/mem_pro.jsp?mem_code=l4mHrVTbzeQ=

--- a/korea.assembly.go.kr/6e8c4f6cc70a1c4651811259aa834c904a4b6d25.html
+++ b/korea.assembly.go.kr/6e8c4f6cc70a1c4651811259aa834c904a4b6d25.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://shindk.kr" target="_blank">http://shindk.kr</a></td>
+							<td style="word-break:break-all;"><a href="http://shindk.kr" target="_blank">http://shindk.kr</a></td>
 						</tr>
 					</tbody>
 				</table>
